MAP-409 Overflow timetable correctly in Chrome

--- a/src/components/timetable/timetable.css
+++ b/src/components/timetable/timetable.css
@@ -3,6 +3,7 @@
     width: 100%;
     padding: var(--border-radius);
     padding-top: calc(var(--border-radius) - 15px);
+    padding-bottom: 0;
     border-radius: var(--border-radius);
     color: var(--hsl-blue);
     background: var(--light-background);
